--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +18,12 @@
     "@langchain/langgraph": "^0.2.53",
     "@langchain/openai": "^0.4.4",
     "@upstash/redis": "^1.34.4",
-    "langchain": "^0.3.19",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "langchain": "^0.3.19",
+    "mongoose": "^8.12.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
